Fixed some spacing issues in code

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ footer p {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     align-items: center;
   }
 
